<resources>
    <string name="app_name">约球</string>
    <string name="action_settings">YueQiu</string>

    <string name="register_login">登录/注册</string>
    <string name="information">球友资料</string>
    <string name="collect">我的收藏</string>
    <string name="team">我的球队</string>
    <string name="track">我的足迹</string>
    <string name="system_set">系统设置</string>

    <string name="head">设置头像</string>
    <string name="email">邮箱</string>
    <string name="name">邮箱/用户名</string>
    <string name="passward">密   码</string>
    <string name="repetpassward">重复密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="rememberword">记住密码</string>
    <string name="reminder">—— 选择第三方登录 ——</string>

    <string name="info_name">昵称</string>
    <string name="info_sex">性别</string>
    <string name="info_age">年龄</string>
    <string name="info_height">身高</string>
    <string name="info_weight">体重</string>
    <string name="info_skilled">擅长位置</string>

    <string name="system_set_toast">通知</string>
    <string name="system_set_account_manager">账号管理</string>
    <string name="system_general_set">消息纪录</string>
    <string name="system_set_clean">清理缓存</string>
    <string name="system_set_about_help">音效设置</string>
    <string name="system_music_set">清除地理位置</string>
    <string name="system_set_clean_position">关于约球</string>

    <string name="errcode_success">成功</string>
    <string name="errcode_cancel">已取消</string>
    <string name="errcode_deny">已被拒绝</string>
    <string name="errcode_unknown">未知错误</string>

</resources>
