<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="match_parent"
    android:background="@color/dimgray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/icon_launcher"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:text="@string/register_login"
        android:textColor="@color/orange"
        android:layout_centerHorizontal="true"
        android:onClick="register_loginClick"
        android:id="@+id/tv_register_login" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_register_login"
        android:background="@null"
        android:drawableLeft="@drawable/icon_sidebar_person"
        android:text="@string/information"
        android:textColor="@color/orange"
        android:onClick="infoClick"
        android:id="@+id/btn_info"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collect"
        android:drawableLeft="@drawable/icon_sidebar_person"
        android:background="@null"
        android:layout_below="@id/btn_info"
        android:textColor="@color/orange"
        android:onClick="collectClick"
        android:id="@+id/btn_collect"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/team"
        android:drawableLeft="@drawable/icon_sidebar_person"
        android:layout_below="@id/btn_collect"
        android:textColor="@color/orange"
        android:onClick="teamClick"
        android:id="@+id/btn_team"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/track"
        android:drawableLeft="@drawable/icon_sidebar_person"
        android:layout_below="@id/btn_team"
        android:textColor="@color/orange"
        android:onClick="trackClick"
        android:id="@+id/btn_track"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/system_set"
        android:drawableLeft="@drawable/icon_sidebar_person"
        android:layout_below="@id/btn_track"
        android:textColor="@color/orange"
        android:onClick="disableClick"
        android:id="@+id/btn_disabled"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_disabled"
        android:background="@drawable/icon_register"
        android:onClick="cancelClick"
        android:layout_margin="20dp"
        android:id="@+id/btn_cancel"/>
</RelativeLayout>
