<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_title"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/system_set"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tv_system_title"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_system_right"
        android:padding="25dp"
        android:background="@null"
        android:onClick="settingBackClick"
        android:id="@+id/btn_system_back"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_system_back"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/icon_system_left"
        android:drawableRight="@drawable/icon_system_select"
        android:text="@string/system_set_toast"
        android:textSize="40dp"
        android:gravity="center_vertical"
        android:drawablePadding="20dp"
        android:id="@+id/tv_system_set_toast"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_system_set_toast"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawableLeft="@drawable/icon_system_left"
        android:drawableRight="@drawable/icon_system_select"
        android:text="@string/system_set_account_manager"
        android:textSize="40dp"
        android:gravity="center_vertical"
        android:drawablePadding="20dp"
        android:id="@+id/tv_system_set_account_manager"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_system_set_account_manager"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/icon_system_left"
        android:drawableRight="@drawable/icon_system_select"
        android:text="@string/system_general_set"
        android:textSize="40dp"
        android:gravity="center_vertical"
        android:drawablePadding="20dp"
        android:id="@+id/tv_system_general_set"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_system_general_set"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/icon_system_left"
        android:drawableRight="@drawable/icon_system_select"
        android:text="@string/system_set_clean"
        android:textSize="40dp"
        android:gravity="center_vertical"
        android:drawablePadding="20dp"
        android:id="@+id/tv_system_set_clean"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_system_set_clean"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/icon_system_left"
        android:drawableRight="@drawable/icon_system_select"
        android:text="@string/system_set_about_help"
        android:textSize="40dp"
        android:gravity="center_vertical"
        android:drawablePadding="20dp"
        android:id="@+id/tv_system_set_about_help"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_system_set_about_help"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/icon_system_left"
        android:drawableRight="@drawable/icon_system_select"
        android:text="@string/system_music_set"
        android:textSize="40dp"
        android:gravity="center_vertical"
        android:drawablePadding="20dp"
        android:id="@+id/tv_system_music_set"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_system_music_set"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/icon_system_left"
        android:drawableRight="@drawable/icon_system_select"
        android:text="@string/system_set_clean_position"
        android:textSize="40dp"
        android:gravity="center_vertical"
        android:drawablePadding="20dp"
        android:id="@+id/system_set_clean_position"/>
</RelativeLayout>
