<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:chx="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.jhy.org.yueqiu.view.ActionBarLayout layout="@layout/layout_action_bar"
        chx:title_text="注册"
        chx:title_textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actionbar_signup_title"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbar_signup_title"
        android:background="@drawable/icon_sidebar_head"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/iv_signup_head"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_signup_head"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_edit"
        android:gravity="center"
        android:hint="@string/email"
        android:id="@+id/et_signup_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_signup_email"
        android:layout_marginTop="10dp"
        android:background="@drawable/icon_edit"
        android:gravity="center"
        android:hint="用户名"
        android:id="@+id/et_signup_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_signup_name"
        android:layout_marginTop="10dp"
        android:background="@drawable/icon_edit"
        android:gravity="center"
        android:hint="@string/passward"
        android:id="@+id/et_signup_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_signup_password"
        android:layout_marginTop="10dp"
        android:background="@drawable/icon_edit"
        android:gravity="center"
        android:hint="@string/repetpassward"
        android:id="@+id/et_signup_repetpassward"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_signup_repetpassward"
        android:background="@drawable/icon_cancel"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:onClick="signupClick"
        android:id="@+id/btn_signup_register"/>
</RelativeLayout>
