<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:chx="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.jhy.org.yueqiu.view.ActionBarLayout
        android:id="@+id/my_action_bar"
        chx:title_text="球友资料"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_below="@id/my_action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_info_head"
                android:background="@drawable/icon_sidebar_head"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
            <TextView
                android:id="@+id/tv_info_zan"
                android:layout_below="@id/iv_info_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/selector_myprofile_zan"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="12"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/icon_myprofile_bground"
                android:layout_below="@id/tv_info_zan"
                android:id="@+id/linear_info_name">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/info_name"
                    android:textSize="20sp"
                    android:id="@+id/tv_info_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:background="@null"
                    android:layout_marginLeft="40dp"
                    android:gravity="center_vertical"
                    android:text=" "
                    android:id="@+id/tv_name"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/linear_info_name"
                android:layout_marginTop="-5dp"
                android:background="@drawable/icon_myprofile_bground"
                android:id="@+id/linear_info_sex">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/info_sex"
                    android:textSize="20sp"
                    android:id="@+id/tv_info_sex"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:paddingTop="13dp"
                    android:layout_marginLeft="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_toRightOf="@id/tv_info_sex"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="15dp"
                    android:text=" "
                    android:id="@+id/tv_sex"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/linear_info_sex"
                android:layout_marginTop="-5dp"
                android:background="@drawable/icon_myprofile_bground"
                android:id="@+id/relat_info_age">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/info_age"
                    android:textSize="20sp"
                    android:id="@+id/tv_info_age"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="20sp"
                    android:layout_marginLeft="50dp"
                    android:paddingTop="7dp"
                    android:layout_centerHorizontal="true"
                    android:layout_toRightOf="@id/tv_info_age"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="15dp"
                    android:text=" "
                    android:id="@+id/tv_age"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/relat_info_age"
                android:layout_marginTop="25dp"
                android:background="@drawable/icon_myprofile_bground"
                android:id="@+id/relat_info_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/info_height"
                    android:textSize="20sp"
                    android:id="@+id/tv_info_height"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="20sp"
                    android:layout_marginLeft="50dp"
                    android:paddingTop="7dp"
                    android:layout_centerHorizontal="true"
                    android:layout_toRightOf="@id/tv_info_height"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="15dp"
                    android:text=" "
                    android:id="@+id/tv_height"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/relat_info_height"
                android:layout_marginTop="-5dp"
                android:background="@drawable/icon_myprofile_bground"
                android:id="@+id/relat_info_weight">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/info_weight"
                    android:textSize="20sp"
                    android:id="@+id/tv_info_weight"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="20sp"
                    android:layout_marginLeft="50dp"
                    android:paddingTop="7dp"
                    android:layout_centerHorizontal="true"
                    android:layout_toRightOf="@id/tv_info_weight"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="15dp"
                    android:text=" "
                    android:id="@+id/tv_weight"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/relat_info_weight"
                android:layout_marginTop="-5dp"
                android:background="@drawable/icon_myprofile_bground"
                android:id="@+id/relat_info_skilled">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/info_skilled"
                    android:textSize="20sp"
                    android:id="@+id/tv_info_skilled"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="20sp"
                    android:layout_marginLeft="50dp"
                    android:paddingTop="7dp"
                    android:layout_centerHorizontal="true"
                    android:layout_toRightOf="@id/tv_info_skilled"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="15dp"
                    android:text=" "
                    android:id="@+id/tv_skilled"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relat_info_skilled"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_addFriend"
                    android:text="加为好友"
                    android:textSize="20dp"
                    android:background="@color/orange"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_sendMessage"
                    android:text="发送消息"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/orange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
